# Zero2Vision

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Camera/: Camera.cpp  Camera.hpp
HTTP/: ImageMetadata.hpp  http.cpp  http.hpp
Network/: http.cpp  http.hpp
Vision/: Camera.cpp  Camera.hpp
